Revise skills section and project descriptions
Updated skills and tools section with new badges and descriptions. Enhanced project descriptions for clarity and detail.

--- a/index.html
+++ b/index.html
@@ -135,66 +135,121 @@
 </div>
   </section>
 
-  <!-- Skills & Tools -->
-  <section class="section">
-    <div class="card">
-      <h2>Skills & Tools</h2>
-      <div class="badges">
-        <img alt="Python" src="https://img.shields.io/badge/Python-3.x-blue" />
-        <img alt="Linux" src="https://img.shields.io/badge/Linux-Ubuntu-orange" />
-        <img alt="Splunk" src="https://img.shields.io/badge/SIEM-Splunk-informational" />
-        <img alt="Rapid7" src="https://img.shields.io/badge/Vuln%20Mgmt-Rapid7-lightgrey" />
-        <img alt="Nmap" src="https://img.shields.io/badge/Recon-Nmap-success" />
-        <img alt="Wireshark" src="https://img.shields.io/badge/Network-Wireshark-9cf" />
-        <img alt="Git" src="https://img.shields.io/badge/Git-Commit%20Early%20%26%20Often-critical" />
-      </div>
+ <!-- Skills & Tools -->
+<section class="section">
+  <div class="card">
+    <h2>Skills & Tools</h2>
+
+    <div class="badges">
+
+      <!-- Programming -->
+      <img alt="Python" src="https://img.shields.io/badge/Python-Automation%20%7C%20Scripting-blue" />
+      <img alt="PowerShell" src="https://img.shields.io/badge/PowerShell-IR%20%7C%20Admin-lightblue" />
+      <img alt="Bash" src="https://img.shields.io/badge/Bash-Linux%20Automation-green" />
+
+      <!-- SIEM / IR -->
+      <img alt="Splunk" src="https://img.shields.io/badge/SIEM-Splunk-informational" />
+      <img alt="Log Analysis" src="https://img.shields.io/badge/Log%20Analysis-Windows%20Event%20Logs-yellow" />
+      <img alt="MITRE ATT&CK" src="https://img.shields.io/badge/MITRE-ATT%26CK-red" />
+
+      <!-- Vulnerability & Network Tools -->
+      <img alt="Nessus" src="https://img.shields.io/badge/Vulnerability%20Scanning-Nessus-orange" />
+      <img alt="Nmap" src="https://img.shields.io/badge/Recon-Nmap-success" />
+      <img alt="Wireshark" src="https://img.shields.io/badge/Network-Wireshark-9cf" />
+
+      <!-- Forensics -->
+      <img alt="Autopsy" src="https://img.shields.io/badge/Forensics-Autopsy-purple" />
+      <img alt="FTK Imager" src="https://img.shields.io/badge/Forensics-FTK%20Imager-lightgrey" />
+      <img alt="Sysinternals" src="https://img.shields.io/badge/Sysinternals-Autoruns%20%7C%20ProcMon-critical" />
+
+      <!-- Platforms -->
+      <img alt="Windows" src="https://img.shields.io/badge/Platform-Windows-blueviolet" />
+      <img alt="Linux" src="https://img.shields.io/badge/Platform-Linux-orange" />
+      <img alt="Active Directory" src="https://img.shields.io/badge/Active%20Directory-Group%20Policy-important" />
+
+      <!-- Cloud -->
+      <img alt="AWS" src="https://img.shields.io/badge/Cloud-AWS-yellowgreen" />
+      <img alt="Azure" src="https://img.shields.io/badge/Cloud-Azure-lightblue" />
+
+      <!-- Version Control -->
+      <img alt="Git" src="https://img.shields.io/badge/Git-Commit%20Early%20%26%20Often-critical" />
+
     </div>
-  </section>
+  </div>
+</section>
 
 <!-- Projects Preview -->
 <section id="featured-work" class="section">
   <h2>Featured Work</h2>
   <div class="projects">
+
+    <!-- DFIR case study -->
     <article class="project">
       <span class="kicker">Forensics / DFIR</span>
       <h3>Forensic Analysis of an Intrusion</h3>
-      <p>Investigated persistence, unauthorized accounts, and SSH exfiltration. Tools: FTK Imager, Autopsy, Autoruns. Report aligned with NIST &amp; ITGC.</p>
       <p>
-        <a href="projects.html" aria-label="View DFIR case study">
-          View case study &rarr;
+        Investigated persistence mechanisms, unauthorized accounts, and SSH
+        exfiltration. Used FTK Imager, Autopsy, and Autoruns to reconstruct
+        the intrusion timeline and recommend remediation aligned with NIST &amp; ITGC.
+      </p>
+      <p>
+        <a href="https://github.com/niknaz-65/digital-forensics-project3"
+           target="_blank" rel="noopener">
+          View project &rarr;
         </a>
       </p>
     </article>
 
+    <!-- Splunk detections -->
     <article class="project">
       <span class="kicker">SOC / SIEM</span>
       <h3>Splunk Detections &amp; Dashboards</h3>
-      <p>Created queries for failed logins, privilege assignment (Event IDs 4624/4672), and process anomalies; built a triage dashboard.</p>
+      <p>
+        Built SPL queries for failed logins, privilege assignment, and suspicious
+        process activity. Designed triage dashboards so analysts can pivot quickly
+        by host and user during incidents.
+      </p>
       <p>
         <a href="https://github.com/Niknaz-65/splunk-detections-dashboards"
-           target="_blank" rel="noopener noreferrer"
-           aria-label="Open Splunk Detections & Dashboards GitHub repository">
-          GitHub Repo &rarr;
+           target="_blank" rel="noopener">
+          View project &rarr;
         </a>
       </p>
     </article>
 
+    <!-- Network recon toolkit -->
     <article class="project">
-      <span class="kicker">Recon / Scripting</span>
+      <span class="kicker">Recon / Automation</span>
       <h3>Network Recon Toolkit</h3>
-      <p>Automated Nmap service enumeration with quick HTML/CSV report generation using Python.</p>
-      <p style="display:flex; gap:10px; flex-wrap:wrap;">
-        <a class="btn outline" href="https://github.com/Niknaz-65/network-recon-toolkit"
-           target="_blank" rel="noopener noreferrer">
-          💻 GitHub Repo
-        </a>
-        <!-- Sample report (PNG). Swap to your HTML/PDF later if you upload one -->
-        <a class="btn pdf" href="https://raw.githubusercontent.com/Niknaz-65/network-recon-toolkit/main/report_screenshot.png"
-           target="_blank" rel="noopener noreferrer">
-          📄 View Report
+      <p>
+        Python wrapper around Nmap that runs common service-enumeration profiles,
+        parses XML output, and generates an HTML summary for handoff to
+        vulnerability scanning and reporting.
+      </p>
+      <p>
+        <a href="https://github.com/Niknaz-65/network-recon-toolkit"
+           target="_blank" rel="noopener">
+          View project &rarr;
         </a>
       </p>
     </article>
+
+    <!-- 8-bit ALU & CPU -->
+    <article class="project">
+      <span class="kicker">Computer Architecture / Logisim</span>
+      <h3>8-bit ALU &amp; Simple CPU</h3>
+      <p>
+        Designed and implemented an 8-bit Arithmetic Logic Unit and simple CPU
+        in Logisim-evolution (UMGC CMSC 306). Supports 14 operations with status
+        flags, registers, and a control unit that loads and executes instructions.
+      </p>
+      <p>
+        <a href="CPU_Project.pdf" target="_blank" rel="noopener">
+          Project report (PDF) &rarr;
+        </a>
+      </p>
+    </article>
+
   </div>
 </section>
 <!-- Certifications CTA -->
