Update project links in projects.html

--- a/projects.html
+++ b/projects.html
@@ -172,8 +172,12 @@
             <li>Built instruction select unit, REG_A / REG_B / REG_OUT registers, and control signals</li>
           </ul>
           <div class="btns">
-            <a class="btn" href="CPU_Project.pdf" target="_blank" rel="noopener">📄 Project Report (PDF)</a>
-            <a class="btn alt" href="ALU.circ" target="_blank" rel="noopener">⚙️ Download ALU.circ</a>
+            <a class="btn" href="https://github.com/Niknaz-65/alu-cpu-logisim"
+              target="_blank" rel="noopener">💻 GitHub Repo</a>
+            <a class="btn alt" href="CPU_Project.pdf"
+              target="_blank" rel="noopener">📄 Project Report (PDF)</a>
+            <a class="btn alt" href="ALU.circ"
+              target="_blank" rel="noopener">⚙️ Download ALU.circ</a>
           </div>
         </div>
       </article>
