Add multiple project descriptions to projects.html

--- a/projects.html
+++ b/projects.html
@@ -181,6 +181,86 @@
           </div>
         </div>
       </article>
+            <!-- CTI / IOC Hunting project -->
+      <article class="card">
+        <div class="thumb" style="background-image:linear-gradient(120deg,#1f2937,#4b5563);"></div>
+        <div class="pad">
+          <div class="kicker">Threat Intelligence / OSINT</div>
+          <h3>Cyber Threat Intelligence & IOC Hunting (OTX)</h3>
+          <p>
+            Investigated 30K+ indicators from AlienVault OTX and LevelBlue to analyze ransomware-related IOCs,
+            enrich IP/domain/file reputation, and simulate CTI workflows.
+          </p>
+          <ul class="meta">
+            <li>Filtered IPv4, URL, domain, and SHA-256 indicators</li>
+            <li>Used API + curl to pull JSON and enrich IOCs</li>
+            <li>Correlated infrastructure with threat families</li>
+          </ul>
+          <div class="btns">
+            <a class="btn" href="https://github.com/Niknaz-65/cti-ioc-hunting-otx" target="_blank" rel="noopener">💻 GitHub Repo</a>
+          </div>
+        </div>
+      </article>
+      <!-- IP Threat Investigation project -->
+      <article class="card">
+        <div class="thumb" style="background-image:linear-gradient(120deg,#0f172a,#1d3557);"></div>
+        <div class="pad">
+          <div class="kicker">OSINT / Network Forensics</div>
+          <h3>IP Threat Investigation & OSINT Analysis</h3>
+          <p>
+            Performed IP-based threat investigation using whois, DNS enumeration, geoIP services, and threat-intel
+            sources to assess risk and extract indicators.
+          </p>
+          <ul class="meta">
+            <li>Used whois, dig, nslookup, and host for DNS mapping</li>
+            <li>Enriched IPs via APIs (ipinfo, IP geolocation tools)</li>
+            <li>Correlated ASN, hosting type, and reputation</li>
+          </ul>
+          <div class="btns">
+            <a class="btn" href="https://github.com/Niknaz-65/ip-threat-investigation" target="_blank" rel="noopener">💻 GitHub Repo</a>
+          </div>
+        </div>
+      </article>
+      <!-- Malware Sandbox Analysis project -->
+      <article class="card">
+        <div class="thumb" style="background-image:linear-gradient(120deg,#111827,#7f1d1d);"></div>
+        <div class="pad">
+          <div class="kicker">Malware Analysis / Sandbox</div>
+          <h3>Malware Sandbox Analysis</h3>
+          <p>
+            Detonated a suspicious file inside a sandbox to observe process behavior, network callbacks, file changes,
+            and extract Indicators of Compromise (IOCs).
+          </p>
+          <ul class="meta">
+            <li>Observed process tree and registry/file system changes</li>
+            <li>Captured network callbacks and potential C2 activity</li>
+            <li>Documented IOCs for SOC/DFIR triage</li>
+          </ul>
+          <div class="btns">
+            <a class="btn" href="https://github.com/Niknaz-65/malware-sandbox-analysis" target="_blank" rel="noopener">💻 GitHub Repo</a>
+          </div>
+        </div>
+      </article>
+      <!-- Malware Sandbox Analysis project -->
+      <article class="card">
+        <div class="thumb" style="background-image:linear-gradient(120deg,#111827,#7f1d1d);"></div>
+        <div class="pad">
+          <div class="kicker">Malware Analysis / Sandbox</div>
+          <h3>Malware Sandbox Analysis</h3>
+          <p>
+            Detonated a suspicious file inside a sandbox to observe process behavior, network callbacks, file changes,
+            and extract Indicators of Compromise (IOCs).
+          </p>
+          <ul class="meta">
+            <li>Observed process tree and registry/file system changes</li>
+            <li>Captured network callbacks and potential C2 activity</li>
+            <li>Documented IOCs for SOC/DFIR triage</li>
+          </ul>
+          <div class="btns">
+            <a class="btn" href="https://github.com/Niknaz-65/malware-sandbox-analysis" target="_blank" rel="noopener">💻 GitHub Repo</a>
+          </div>
+        </div>
+      </article>
     </section>
   </main>
 
