Update certification descriptions and resume link

--- a/certifications.html
+++ b/certifications.html
@@ -144,7 +144,7 @@
 
   <main class="wrap">
     <h1>Certifications</h1>
-    <p class="lead">Verified credentials highlighting scripting, analytics, and foundational cloud knowledge for security work.</p>
+    <p class="lead">Verified credentials highlighting scripting, analytics, and foundational scripting and cloud concepts supporting IT and security projects.</p>
 
     <section class="list" aria-label="Completed certifications">
       <!-- IBM Python Basics -->
@@ -153,7 +153,7 @@
         <div>
           <h3>Python Basics for Data Science</h3>
           <p class="meta">IBM • 2024</p>
-          <p class="desc">Data handling, automation, and scripting to support log parsing, enrichment, and analysis in security workflows.</p>
+          <p class="desc">Data handling, automation, and scripting used in coursework and projects for parsing and analyzing sample datasets.</p>
         </div>
         <div>
           <a class="btn" href="#" target="_blank" rel="noopener">🔗 Verify</a>
@@ -166,7 +166,7 @@
         <div>
           <h3>R Programming Fundamentals</h3>
           <p class="meta">Stanford Online • 2024</p>
-          <p class="desc">Statistical thinking and data wrangling useful for threat trend analysis and KPI reporting.</p>
+          <p class="desc">Statistical thinking and data wrangling useful for practicing data analysis and visualization in academic projects.</p>
         </div>
         <div>
           <a class="btn" href="#" target="_blank" rel="noopener">🔗 Verify</a>
@@ -178,7 +178,7 @@
   <footer>
     <div class="foot">
       <small>© 2025 Niknaz Sadehvandi • Cybersecurity Portfolio</small>
-      <a href="Niknaz_Sadehvandi_Resume.pdf" download style="color:#cfd9ea">Download Resume</a>
+      <a href="Niknaz_Sadehvandi_IT_Support_Resume.pdf" download style="color:#cfd9ea">Download Resume</a>
     </div>
   </footer>
 </body>
